# service-layer-objmodel

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  script  setup.cfg  setup.py
.github/: CODEOWNERS
grpc/cpp/: build_libiosxrsl.sh  build_tutorials.sh  (+1 more)
grpc/python/src/: setup.cfg  setup.py
grpc/python/src/genpy/: __init__.py  sl_af_pb2.py  sl_af_pb2_grpc.py  sl_bfd_common_pb2.py  sl_bfd_ipv4_pb2.py  sl_bfd_ipv4_pb2_grpc.py  sl_bfd_ipv6_pb2.py  sl_bfd_ipv6_pb2_grpc.py  sl_bgp_pb2.py  sl_bgp_pb2_grpc.py  sl_bgpls_topology_pb2.py  sl_bgpls_topology_pb2_grpc.py  sl_common_types_pb2.py  sl_global_pb2.py  sl_global_pb2_grpc.py  sl_interface_pb2.py  sl_interface_pb2_grpc.py  sl_l2_route_pb2.py  sl_l2_route_pb2_grpc.py  sl_mpls_pb2.py  sl_mpls_pb2_grpc.py  sl_policy_pb2.py  sl_policy_pb2_grpc.py  sl_protocols_pb2.py  sl_route_common_pb2.py  sl_route_ipv4_pb2.py  sl_route_ipv4_pb2_grpc.py  sl_route_ipv6_pb2.py  sl_route_ipv6_pb2_grpc.py  sl_sr_common_pb2.py  sl_srte_pcalc_stateful_pb2.py  sl_srte_pcalc_stateful_pb2_grpc.py  sl_srte_policy_pb2.py  sl_srte_policy_pb2_grpc.py  sl_version_pb2.py
grpc/python/src/lindt/: __init__.py  lindt.py  serializers.py
grpc/python/src/sl_api/: __init__.py  exceptions.py  grpc_client.py  serializers.py  sl_api.py  sl_util.py  slapi_client.py
grpc/python/src/slapi_package.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
grpc/python/src/tests/: __init__.py  base_ap.py  cafy.py  env.sh  inputfile.json  run.sh  template-sfd.json  template.json  template.json.bkp  template_temp.json  test_json.py  test_lindt.py  test_serializer.py  test_sl_api.py  test_sl_bfd.py  test_sl_global.py  test_sl_intf.py  test_sl_l2_route.py  test_sl_mpls.py  test_sl_route.py  topology.json
grpc/python/src/tutorial/: README.md  client_init.py  interface.py  mpls_ilm.py  quickstart.py  route.py  vrf.py
grpc/python/src/tutorial/grpc_beta/: client_init.py  interface.py  mpls_ilm.py  quickstart.py  vrf.py
grpc/python/src/tutorial_slaf/: README.md  __init__.py  quickstart.py  slaf.py
grpc/python/src/util/: util.py
service_layer_objmodel.egg-info/: PKG-INFO  SOURCES.txt
(+717 files in other folders)
