[metadata]
name = service_layer_objmodel
version = 0.5.0.0
author = SLAPI-team
author_email = sl-api-dev@cisco.com
description = A package for SL-API
url = https://github.com/Cisco-Service-Layer/service-layer-objmodel

[options]
packages =
    grpc.python.src.sl_api
    grpc.python.src.genpy
    grpc.python.src.util
install_requires =
    requests