[metadata]
name= slapi_package
version = 0.1.0
author = SLAPI-team
author_email = mbenzeg@cisco.com
description = A package for SL-API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://wwwin-github.cisco.com/ios-xr/service-layer-objmodel/grpc/python/src

[options]
packages=sl_api, genpy, util
install_requires =
    requests