[metadata]
name = slapi_package
version = 0.5.0.0
author = SLAPI-team
author_email = sl-api-dev@cisco.com
description = A python package for SL-API
url = https://github.com/Cisco-Service-Layer/service-layer-objmodel

[options]
packages =
    sl_api
    genpy
    util
install_requires =
    requests